Add ToolboxCI submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "+adi/+common"]
 	path = +adi/+common
 	url = https://github.com/analogdevicesinc/ToolboxCommon.git
+        branch = master
+[submodule "CI/scripts"]
+	path = CI/scripts
+	url = https://github.com/analogdevicesinc/ToolboxCI.git
+	branch = master
